--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?createDatabaseIfNotExist=true
-spring.datasource.username=${MYSQL_USR}
-spring.datasource.password=${MYSQL_PSW}
+#spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?createDatabaseIfNotExist=true
+#spring.datasource.username=${MYSQL_USR}
+#spring.datasource.password=${MYSQL_PSW}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#server.port=${BACKEND_INTERNAL_PORT}
+
+spring.datasource.url=jdbc:mysql://localhost:3306/SPEDB?createDatabaseIfNotExist=true
+spring.datasource.username=arjun
+spring.datasource.password=Password@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=${BACKEND_INTERNAL_PORT}
+server.port=8086
