--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
             </plugin>
         </plugins>
 
-<!--        <finalName>jairu-0.0.1-SNAPSHOT</finalName>-->
+        <finalName>jairu-0.0.1-SNAPSHOT</finalName>
     </build>
 
 
