--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.spe</groupId>
-    <artifactId>jairu</artifactId>
+    <artifactId>workwise</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>project</name>
     <description>project</description>
@@ -165,7 +165,7 @@
             </plugin>
         </plugins>
 
-        <finalName>jairu-0.0.1-SNAPSHOT</finalName>
+        <finalName>workwise-0.0.1-SNAPSHOT</finalName>
     </build>
 
 
